# ROBOTICS-PROJECT

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
my_robot_arm/: CMakeLists.txt
my_robot_arm/config/: controllers.yaml
src/basic_arm/: CMakeLists.txt  README.md  basic_arm.xml  package.xml
src/basic_arm/bringup/config/: r6bot_controller.yaml
src/basic_arm/bringup/launch/: r6bot_controller.launch.py  send_trajectory.launch.py
src/basic_arm/controller/: r6bot_controller.cpp
src/basic_arm/controller/include/basic_arm/: r6bot_controller.hpp
src/basic_arm/description/launch/: view_r6bot.launch.py
src/basic_arm/description/ros2_control/: r6bot.ros2_control.xacro
src/basic_arm/description/urdf/: r6bot.urdf.xacro
src/basic_arm/doc/: userdoc.rst
src/basic_arm/hardware/: r6bot_hardware.cpp
src/basic_arm/hardware/include/basic_arm/: r6bot_hardware.hpp
src/basic_arm/install/: local_setup.sh  setup.sh
src/basic_arm/install/basic_arm/include/basic_arm/basic_arm/: r6bot_hardware.hpp
src/basic_arm/install/basic_arm/lib/basic_arm/: send_trajectory
src/basic_arm/install/basic_arm/share/ament_index/resource_index/controller_interface__pluginlib__plugin/: basic_arm
src/basic_arm/install/basic_arm/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: basic_arm
src/basic_arm/install/basic_arm/share/ament_index/resource_index/package_run_dependencies/: basic_arm
src/basic_arm/install/basic_arm/share/ament_index/resource_index/parent_prefix_path/: basic_arm
src/basic_arm/install/basic_arm/share/basic_arm/: basic_arm.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/basic_arm/install/basic_arm/share/basic_arm/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  basic_armConfig-version.cmake  basic_armConfig.cmake  export_basic_armExport-noconfig.cmake  export_basic_armExport.cmake
src/basic_arm/install/basic_arm/share/basic_arm/config/: r6bot_controller.yaml
src/basic_arm/install/basic_arm/share/basic_arm/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
src/basic_arm/install/basic_arm/share/basic_arm/launch/: r6bot_controller.launch.py  send_trajectory.launch.py  view_r6bot.launch.py
src/basic_arm/install/basic_arm/share/basic_arm/ros2_control/: r6bot.ros2_control.xacro
src/basic_arm/install/basic_arm/share/basic_arm/urdf/: r6bot.urdf.xacro
src/basic_arm/log/: latest_build
src/basic_arm/test/: test_r6bot_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
(+127 files in other folders)
